--- a/samples/AudioPlayerSample/MainPage.xaml
+++ b/samples/AudioPlayerSample/MainPage.xaml
@@ -15,25 +15,48 @@
                 HeightRequest="200"
                 HorizontalOptions="Center" />
 
-            <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
+            <!-- TODO: we don't have position yet --> 
+            <!--<Label Text="Postion:" />
+            <Slider x:Name="sliderPosition" />
+            <Label x:Name="lblPosition" />-->
 
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
+            <HorizontalStackLayout Spacing="5" HorizontalOptions="Center">
+                <Button
+                    x:Name="btnPlay"
+                    Text="Play"
+                    BackgroundColor="Green"
+                    Clicked="btnPlay_Clicked"
+                    SemanticProperties.Hint="Start playing a sound" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Play sound"
-                SemanticProperties.Hint="Plays a sample sound through the Simple Audio Player plugin"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
+                <Button
+                    x:Name="btnPause"
+                    Text="Pause"
+                    BackgroundColor="Blue"
+                    Clicked="btnPause_Clicked"
+                    SemanticProperties.Hint="Pause playing the sound" />
+
+                <Button
+                    x:Name="btnStop"
+                    Text="Stop"
+                    BackgroundColor="Red"
+                    Clicked="btnStop_Clicked"
+                    SemanticProperties.Hint="Stop playing the sound" />
+            </HorizontalStackLayout>
+
+            <Label Text="Volume:" />
+            <Slider
+                x:Name="sliderVolume"
+                Minimum="0"
+                Maximum="1"
+                Value="1"
+                ValueChanged="sliderVolume_ValueChanged" />
+
+            <Label Text="Balance:" />
+            <Slider
+                x:Name="sliderBalance"
+                Minimum="-1"
+                Maximum="1"
+                ValueChanged="sliderBalance_ValueChanged" />
 
         </VerticalStackLayout>
     </ScrollView>
