--- a/samples/AudioPlayerSample/AppShell.xaml
+++ b/samples/AudioPlayerSample/AppShell.xaml
@@ -3,13 +3,11 @@
     x:Class="AudioPlayerSample.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:AudioPlayerSample"
+    xmlns:pages="clr-namespace:AudioPlayerSample.Pages"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Title="My Library"
+        ContentTemplate="{DataTemplate pages:MyLibraryPage}" />
 
 </Shell>
-
