--- a/samples/AudioPlayerSample/Pages/AudioRecorderPage.xaml
+++ b/samples/AudioPlayerSample/Pages/AudioRecorderPage.xaml
@@ -10,7 +10,11 @@
             Text="{Binding RecordButtonText}"
             Command="{Binding StartCommand}"
             BackgroundColor="{Binding RecordButtonColor}"/>
-        <Label Text="{Binding audioTime, StringFormat='{0:s\\.f} sec'}"
+        <Button
+            Text="Play"
+            Command="{Binding PlayCommand}"
+            BackgroundColor="{Binding RecordButtonColor}"/>
+        <Label Text="{Binding AudioTime, StringFormat='{0:0.00} sec'}"
                HorizontalOptions="Center">
         </Label>
     </VerticalStackLayout>
