--- a/samples/AudioPlayerSample/Pages/AudioRecorderPage.xaml
+++ b/samples/AudioPlayerSample/Pages/AudioRecorderPage.xaml
@@ -1,21 +1,52 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:AudioPlayerSample.ViewModels"
              x:Class="AudioPlayerSample.Pages.AudioRecorderPage"
              Title="Audio Recorder"
              x:DataType="viewmodels:AudioRecorderPageViewModel">
-    <VerticalStackLayout>
-        <Button
-            Text="{Binding RecordButtonText}"
-            Command="{Binding StartCommand}"
-            BackgroundColor="{Binding RecordButtonColor}"/>
-        <Button
-            Text="Play"
-            Command="{Binding PlayCommand}"
-            BackgroundColor="{Binding RecordButtonColor}"/>
-        <Label Text="{Binding AudioTime, StringFormat='{0:0.00} sec'}"
-               HorizontalOptions="Center">
-        </Label>
-    </VerticalStackLayout>
+    <Grid>
+        <VerticalStackLayout
+            HorizontalOptions="Center"
+            VerticalOptions="Center">
+
+            <VerticalStackLayout.Triggers>
+                <DataTrigger
+                    TargetType="VerticalStackLayout"
+                    Binding="{Binding IsRecording}"
+                    Value="False" />
+            </VerticalStackLayout.Triggers>
+
+            <Button
+                Text="Start"
+                Command="{Binding StartCommand}" />
+
+            <Button
+                Text="Play"
+                Command="{Binding PlayCommand}"/>
+        </VerticalStackLayout>
+
+        <VerticalStackLayout
+            HorizontalOptions="Center"
+            VerticalOptions="Center"
+            IsVisible="False">
+
+            <VerticalStackLayout.Triggers>
+                <DataTrigger
+                    TargetType="VerticalStackLayout"
+                    Binding="{Binding IsRecording}"
+                    Value="True" />
+            </VerticalStackLayout.Triggers>
+
+            <Button
+                Text="Stop"
+                Command="{Binding StopCommand}"/>
+
+            <Label
+                Text="{Binding AudioTime, StringFormat='{0:0.00} sec'}"
+                HorizontalOptions="Center" />
+        </VerticalStackLayout>
+
+    </Grid>
+    
 </ContentPage>
