--- a/samples/AudioPlayerSample/Pages/MyLibraryPage.xaml
+++ b/samples/AudioPlayerSample/Pages/MyLibraryPage.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:AudioPlayerSample.ViewModels"
@@ -20,7 +20,7 @@
         RowDefinitions="50,*">
 
         <Button
-            Text="Test Recorder"
+            Text="My Recordings"
             Command="{Binding AddRecordingCommand}" />
 
         <CollectionView ItemsSource="{Binding Music}"
