--- a/samples/Plugin.Maui.Audio.Sample/Platforms/Windows/App.xaml
+++ b/samples/Plugin.Maui.Audio.Sample/Platforms/Windows/App.xaml
@@ -1,9 +1,9 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="AudioPlayerSample.WinUI.App"
+    x:Class="Plugin.Maui.Audio.Sample.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:AudioPlayerSample.WinUI">
+    xmlns:local="using:Plugin.Maui.Audio.Sample.WinUI">
 
 </maui:MauiWinUIApplication>
 
