Async playback updates

--- a/samples/Plugin.Maui.Audio.Sample/Pages/AudioRecorderPage.xaml
+++ b/samples/Plugin.Maui.Audio.Sample/Pages/AudioRecorderPage.xaml
@@ -28,6 +28,10 @@
                 Text="Play"
                 Command="{Binding PlayCommand}" />
 
+            <Button
+                Text="StopPlay"
+                Command="{Binding StopPlayCommand}" />
+
             <Label
                 Text="{Binding RecordingTime, Converter={StaticResource SecondsToStringConverter}}" />
         </VerticalStackLayout>
