fixes issues with seek and speed (#109)
* Add support for AudioRecording Options

* delete raw file on android after recording stopped and throw exception on ios

* ensure recordings and other audio can be played on iOS after a recording session.

EnableRate on iOS to ensure speed value can be changed.

* fixes #32 : load audio from files on android

* fix navigation issue in setter

* fixes issues with seek and speed

* stream support for android

* Try fix CI

* Revert "Try fix CI"

This reverts commit 10cda9b24193169de82f3ca992d031c957447dd8.

* Update Plugin.Maui.Audio.Sample.csproj

Co-authored-by: Gerald Versluis <gerald@verslu.is>

* Update AudioRecorderPageViewModel.cs

Co-authored-by: Gerald Versluis <gerald@verslu.is>

* Update AudioPlayer.macios.cs

Co-authored-by: Gerald Versluis <gerald@verslu.is>

* Update AudioPlayer.macios.cs

Co-authored-by: Gerald Versluis <gerald@verslu.is>

* Update AudioRecordingOptions.cs

Co-authored-by: Gerald Versluis <gerald@verslu.is>

* Update AudioRecordingOptions.cs

Co-authored-by: Gerald Versluis <gerald@verslu.is>

* Update AudioRecordingOptions.cs

Co-authored-by: Gerald Versluis <gerald@verslu.is>

* Update AudioRecordingOptions.cs

Co-authored-by: Gerald Versluis <gerald@verslu.is>

* Update AudioRecordingOptions.cs

Co-authored-by: Gerald Versluis <gerald@verslu.is>

* support for windows recording options

* trace error message

* bug fixes on windows & support of Alac & Flac

* reset csproj

* replace observable collections with lists

* fix error on ios and final merges

* remove redundant code

* merging

* fix navigation while playing

* delay only on windows

* workaround for state machine issues on windows

* merge

* restore some lost changes

* Update Plugin.Maui.Audio.Sample.csproj

* Update samples/Plugin.Maui.Audio.Sample/ViewModels/MusicPlayerPageViewModel.cs

Co-authored-by: Shaun Lawrence <shaunrlawrence@gmail.c

--- a/samples/Plugin.Maui.Audio.Sample/Pages/MusicPlayerPage.xaml
+++ b/samples/Plugin.Maui.Audio.Sample/Pages/MusicPlayerPage.xaml
@@ -40,6 +40,8 @@
             
             <Slider
                 Value="{Binding CurrentPosition}"
+				DragStartedCommand="{Binding SeekStartedCommand}"
+				DragCompletedCommand="{Binding SeekCommand}"
                 Maximum="{Binding Duration}" />
 
             <HorizontalStackLayout Spacing="5" HorizontalOptions="Center">
@@ -82,20 +84,30 @@
                 Maximum="1"
                 Value="{Binding Balance}" />
 
+			<Label IsVisible="{Binding CanSetSpeed}">
+				<Label.FormattedText>
+					<FormattedString>
+						<Span Text="Audio Player Speed" />
+						<Span Text="{Binding AudioSpeed, StringFormat=' ({0:F1}):'}" />
+					</FormattedString>
+				</Label.FormattedText>
+			</Label>
 
 			<Label IsVisible="{Binding CanSetSpeed}">
 				<Label.FormattedText>
 					<FormattedString>
-						<Span Text="Speed" />
-						<Span Text="{Binding Speed, StringFormat=' ({0:F1}):'}"/>
+						<Span Text="Speed setting" />
+						<Span Text="{Binding UserSpeed, StringFormat=' ({0:F1}):'}" />
 					</FormattedString>
 				</Label.FormattedText>
 			</Label>
+
 			<Slider
 				IsVisible="{Binding CanSetSpeed}"
                 Minimum="{Binding MinimumSpeed}"
                 Maximum="{Binding MaximumSpeed}"
-                Value="{Binding Speed}" />
+                Value="{Binding UserSpeed}"
+				DragCompletedCommand="{Binding UpdateSpeedCommand}"/>
 		</VerticalStackLayout>
     </ScrollView>
 
