Recording stream option with eventhandler for LinearPCM (WAV)

--- a/samples/Plugin.Maui.Audio.Sample/Pages/AudioRecorderPage.xaml
+++ b/samples/Plugin.Maui.Audio.Sample/Pages/AudioRecorderPage.xaml
@@ -17,6 +17,10 @@
 							 VerticalOptions="Center">
 
 			<Picker Title="Select Sample Rate"
+			        ItemsSource="{Binding CaptureModes}"
+			        SelectedItem="{Binding SelectedCaptureMode, Mode=TwoWay}" />
+
+			<Picker Title="Select Sample Rate"
 					ItemsSource="{Binding SampleRates}"
 					SelectedItem="{Binding SelectedSampleRate, Mode=TwoWay}" />
 
