Audio manipulation example, splitting audio in different channels

--- a/samples/Plugin.Maui.Audio.Sample/Pages/AudioStreamerPage.xaml
+++ b/samples/Plugin.Maui.Audio.Sample/Pages/AudioStreamerPage.xaml
@@ -38,6 +38,13 @@
 			<Button Text="Play"
 					Command="{Binding PlayCommand}" />
 
+			<HorizontalStackLayout>
+				<Button Text="Left"
+				        Command="{Binding PlayLeftCommand}" />
+				<Button Text="Right"
+				        Command="{Binding PlayRightCommand}" />
+			</HorizontalStackLayout>
+
 			<Button Text="StopPlay"
 					Command="{Binding StopPlayCommand}" />
 
