Fix sample pages layout

--- a/samples/Plugin.Maui.Audio.Sample/Pages/AudioRecorderPage.xaml
+++ b/samples/Plugin.Maui.Audio.Sample/Pages/AudioRecorderPage.xaml
@@ -12,7 +12,8 @@
 	</ContentPage.Resources>
 
 	<ScrollView>
-		<VerticalStackLayout HorizontalOptions="Center"
+		<VerticalStackLayout HorizontalOptions="Fill"
+							 Margin="20"
 							 Spacing="10"
 							 VerticalOptions="Center">
 
