--- a/samples/Plugin.Maui.Audio.Sample/Pages/AudioStreamerPage.xaml
+++ b/samples/Plugin.Maui.Audio.Sample/Pages/AudioStreamerPage.xaml
@@ -13,7 +13,8 @@
 	</ContentPage.Resources>
 
 	<ScrollView>
-		<VerticalStackLayout HorizontalOptions="Center"
+		<VerticalStackLayout HorizontalOptions="Fill"
+							 Margin="20"
 							 Spacing="10"
 							 VerticalOptions="Center">
 
